gccida/g1/init_flow
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/init_flow/src/cfg.c:599:6: error: use of undeclared identifier 'initialized_12'
if ( initialized_12 ) 
     ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/init_flow/src/cfg.c:648:1: error: use of undeclared identifier 'initialized_12'
initialized_12 = 1; 
^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/init_flow/src/obj/cfg.o] Error 1
